istio/otel-collector-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: otlp-collector
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  ports:
    - name: otlp # Default endpoint for OpenTelemetry receiver.
      port: 4317
      protocol: TCP
      targetPort: 4317
    - name: jaeger-grpc # Default endpoint for Jaeger gRPC receiver
      port: 14250
    - name: prometheus-http # Default endpoint for Jaeger HTTP receiver.
      port: 9091
    - name: jaeger-thrift-http # Default endpoint for Jaeger HTTP receiver.
      port: 14268
    - name: zipkin # Default endpoint for Zipkin receiver.
      port: 9411
    - name: metrics # Default endpoint for querying metrics.
      port: 8888
    - port: 55680
      name: kspan
      protocol: TCP
      targetPort: 55680
  selector:
    component: otel-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1 #TODO - adjust this to your own requirements
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector-contrib:0.22.0
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
          - mountPath: /var/log
            name: varlog
            readOnly: true
          - mountPath: /var/lib/docker/containers
            name: varlibdockercontainers
            readOnly: true
          - mountPath: /etc/otel/config.yaml
            name: data
            subPath: config.yaml
            readOnly: true
        ports:
          - containerPort: 55679 # Default endpoint for ZPages.
          - containerPort: 4317 # Default endpoint for OpenTelemetry receiver.
          - containerPort: 14250 # Default endpoint for Jaeger HTTP receiver.
          - containerPort: 14268 # Default endpoint for Jaeger HTTP receiver.
          - containerPort: 9411 # Default endpoint for Zipkin receiver.
          - containerPort: 8888  # Default endpoint for querying metrics.
          - containerPort: 55680
      terminationGracePeriodSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: data
        configMap:
          name: otel-collector-conf
